istio/request_routing/nodejs-dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs
    version: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      version: development
  template:
    metadata:
      labels:
        app: nodejs
        version: development
    spec:
      containers:
        - name: nodejsapp
          image: pronoob007/nodejsapp:development-latest
          ports:
            - containerPort: 3000
