istio/request_routing/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo-db
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: NodePort
