istio/request_routing/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs-service
spec:
  host: nodejs-service
  subsets:
    - name: prod
      labels:
        version: prod
    - name: development
      labels:
        version: development
