istio/request_routing/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodejs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-service
spec:
  hosts:
    - nodejs-service
  http:
    - route:
        - destination:
            host: nodejs-service
            subset: prod
          weight: 80
        - destination:
            host: nodejs-service
            subset: development
          weight: 20
